syntax = 'proto3';

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/api/annotations.proto";


package proto3;

option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.goproto_registration) = true;
option (gogoproto.messagename_all) = true;
option (gogoproto.protosizer_all) =false;


// Transaction Service definition
service Transaction {
	rpc BroadcastTxSync(TransactRequest)returns(ReceiptResponse);
  rpc BroadcastTxAsync(TransactRequest)returns(ReceiptResponse);
	rpc GetUnconfirmedTxs(Empty2)returns(UnconfirmTxsResponse)    {option (google.api.http) = {get: "/UnconfirmedTxs";};};
}

message Empty2{}

message TransactRequest {
  string Envelope = 1;
}

message ReceiptResponse {
  string Receipt = 1;
}

message UnconfirmTxsResponse {
  int32 Count = 1;
	repeated string Envelopes = 2;
}
